<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".confirmation.ui.ConfirmationFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_margin="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:text="@string/do_you_really_want_exist_the_app"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:text="@string/exit_details"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:backgroundTint="@color/primary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/home"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnExit"
                app:layout_constraintEnd_toStartOf="@+id/btnExit"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:backgroundTint="@color/primary"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/exit"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnHome" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>