<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="title"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".image.ui.ImageFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvImage"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_margin="@dimen/_8sdp"
            android:backgroundTint="@color/transparent"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/primary_dark"
            app:strokeWidth="@dimen/_1sdp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/full_image"
                android:src="@drawable/ic_launcher_background" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_8sdp"
            android:text="@{title}"
            android:textSize="@dimen/_22ssp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvImage"
            tools:text="Title" />

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/share_image_button"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/next"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnShare"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>